[project]
name = "app_yaml_load"
version = "0.1.0"
description = "Shared AppYamlConfig initialization for servers, CLIs, and tests"
requires-python = ">=3.11,<3.12"
dependencies = [
    "app_yaml_static_config",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app_yaml_load"]

[tool.pytest.ini_options]
testpaths = ["__tests__"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
