[project]
name = "app_yaml_overwrites"
version = "0.1.0"
description = "Unified Configuration SDK (Polyglot)"
requires-python = ">=3.11,<3.12"
dependencies = [
    "click>=8.1.0",
    "fastapi==0.128.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
config-sdk = "app_yaml_overwrites.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app_yaml_overwrites"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["__tests__"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
