[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cache_json_awss3_storage"
version = "1.0.0"
description = "AWS S3-backed JSON storage with TTL support and polyglot parity"
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"
authors = [
    { name = "MTA Team" }
]
keywords = ["aws", "s3", "json", "storage", "cache", "ttl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
    "Typing :: Typed",
]

dependencies = [
    "aiobotocore[boto3]==3.1.1",
]

[project.optional-dependencies]
appconfig = [
    "aws-s3-client>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "moto[s3]>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "aws-s3-client>=1.0.0",
]
fastapi = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
]

[project.urls]
Homepage = "https://github.com/mta/cache_json_awss3_storage"
Documentation = "https://github.com/mta/cache_json_awss3_storage#readme"

[tool.hatch.build.targets.wheel]
packages = ["cache_json_awss3_storage"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["cache_json_awss3_storage/tests", "__tests__"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
